* Make valid XHTML, should fix a layout problem in IE7 * Tweak link styles * Add a link to the forum * Make the demo link to the wiki (for login details)

--- a/htdocs/sit.css
+++ b/htdocs/sit.css
@@ -7,23 +7,29 @@ body {
   margin: 0px 0px 15px 0px;
 }
 
+h3 { font-size: 120%; }
+
 #container {
-width: 80%;
+width: 90%;
 margin: 0 auto;
 }
 
 #main {
-  width: 67%;         /* width of .main container */
-  float: left;        /* left side of window */
+  width: 60%;         /* width of .main container */
+/*  float: left;   */     /* left side of window */
   margin: 0;
   padding: 1% 2%;
+/*  border: 1px solid gray;*/
 }
 
 #side {
-  margin-left: 75%;   /* past content */
+  margin-top: 2em;
+  margin-right: 50px;   /* past content */
   padding: 1%;
   font-size: 90%;
-
+  float: right;
+  width: 30%;
+/*border: 1px solid gray;*/
 }
 
 h2 {
@@ -90,7 +96,7 @@ h1 { text-align: center; }
 }
 
 #menu li:hover {
-  color: #900;
+  color: #203894;
   background-color: #FFF;
 }
 
@@ -102,6 +108,9 @@ h1 { text-align: center; }
   color: #5B5B5B;
   padding: 0.25em 0.8em 0.25em 0.8em;
   font-weight: bold;    
+}
+#menu a:hover {
+  color: #203894;
 }
 
 #menu a.greyed, #menu a.greyed:hover { color: #C6C3C6; }
@@ -143,3 +152,8 @@ margin: 4px;
   background:transparent url('http://sitracker.sourceforge.net/searchbg.png') no-repeat scroll 4px center;
   color: #888;
 }
+
+a:link { color: #203894; text-decoration: none; }
+a:visited { color: #2F2F2F; text-decoration: none; }
+a:hover, a:active { color: #5B5B5B; text-decoration: underline; }
+
